<resources>
    <string name="app_name">Indian Army Preparation</string>
    <string name="start_game">Start the game</string>
    <string name="statistics">Statistics</string>
    <string name="instructions">Instructions</string>
    <string name="acknowledgements">Acknowledgements</string>

    <!--welcome page subtitles-->
    <string name="start_subtitle">200 seconds of pain!</string>
    <string name="statistics_subtitle">They\'re already calculated</string>
    <string name="instructions_subtitle">Pretty simple, I promise</string>
    <string name="acknowledgements_subtitle">Question and image sources</string>

    <string name="no_stats">There are no statistics. Please complete a quiz first.</string>

    <!--activity names-->
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="results">Quiz Result</string>

    <!--button bar-->
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!--post quiz cards-->
    <string name="swipe_left_for_answers">Swipe left to view each question, your choice, and the correct answer</string>
    <string name="question">Question: </string>
    <string name="you_selected">Your Choice: </string>
    <string name="correct_answer">Correct Answer: </string>

    <!--post quiz statistics-->
    <string name="average_time_right_answers">Average time taken on right answers</string>
    <string name="average_time_wrong_answers">Average time taken on wrong answers</string>


    <!--statistics headers-->
    <string name="overall_performance">Overall Performance</string>
    <string name="averages">Overall Statistics</string>
    <string name="category_records">Category Statistics</string>

    <!--statistics names-->
    <string name="total_quizzes">Total number of quizzes </string>
    <string name="highest_score">Highest score </string>
    <string name="perfect_quizzes">Perfect quizzes</string>

    <string name="average_score">Average percentage score</string>
    <string name="average_time_right">Average time on right answers</string>
    <string name="average_time_wrong">Average time on wrong answers</string>

    <string name="best_category">Best category</string>
    <string name="worst_category">Worst category</string>
    <string name="format_best_and_worst_categories">%1$s (%2$d%%)</string>

    <string name="total_questions_answered">Total answered questions</string>
    <string name="correctly_answered">Correctly answered questions</string>
    <string name="percentage_score">Percentage score</string>
    <string name="average_time_overall">Average time (overall)</string>
    <string name="full_stats_for">Full Statistics: </string>

    <string name="format_percent">%1$.2f%%</string>
    <string name="format_seconds">%1$.1f seconds</string>
    <string name="format_integer">%1$.0f</string>
    <string name="minus_sign">-</string>

    <!--gameplay instructions-->
    <string name="start_the_quiz">Start the quiz</string>
    <string name="tap_start_game">Tap on "Start Game" on the Welcome Page</string>
    <string name="choose_your_answer">Choose your answer</string>
    <string name="tap_the_answer">Tap on the desired choice to advance the quiz</string>
    <string name="score_lots_of_points">Score many points</string>
    <string name="good_luck">Good luck!</string>
    <string name="warning_exclamation">Warning!</string>
    <string name="warning_dont_leave_quiz">If you leave the app while attempting a quiz, the current quiz will be ended</string>


    <string name="test_text">If you leave the app while attempting a quiz, the current quiz will be ended If you leave the app while attempting a quiz, the current quiz will be ended If you leave the app while attempting a quiz, the current quiz will be ended</string>

    <!--acknowledgments-->
    <string name="content_acknowledgments">Content Acknowledgments</string>
    <string name="image_acknowledgments">Image Acknowledgments</string>

    <!--miscellaneous-->
    <string name="no_choice">(Answer not attempted)</string>
    <string name="skipped">Skipped Question</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">closed</string>


    <string-array name="category_names">
        <item>General</item>
        <item>Science</item>
        <item>World</item>
        <item>History</item>
        <item>Entertainment</item>
        <item>Sports</item>
    </string-array>


    <string-array name="quiz_name">

        1
        <item>All Quiz</item>
        2
        <item>Subjects</item>
        3
        <item>Topics</item>
        3
        <item>Section</item>

    </string-array>

    <string-array name="state_type">


        1
        <item>Please Select Your State</item>
        1
        <item>Andhra Pradesh</item>
        2
        <item>Arunachal Pradesh</item>
        3
        <item>Assam</item>
        4
        <item>Bihar</item>
        5
        <item>Chhattisgarh</item>
        6
        <item>Goa</item>
        7
        <item>Gujarat</item>
        8
        <item>Haryana</item>
        9
        <item>Himachal Pradesh</item>
        10
        <item>Jammu and Kashmir</item>
        11
        <item>Jharkhand</item>
        12
        <item>Karnataka</item>
        13
        <item>Kerala</item>
        14
        <item>Lakshadweep</item>
        15
        <item>Madhya Pradesh</item>
        16
        <item>Maharashtra</item>
        17
        <item>Manipur</item>
        18
        <item>Meghalaya</item>
        19
        <item>Mizoram</item>
        20
        <item>Nagaland</item>
        21
        <item>Orissa</item>
        22
        <item>Rajasthan</item>
        23
        <item>Sikkim</item>
        24
        <item>Tamil Nadu</item>
        25
        <item>Telangana</item>
        26
        <item>Tripura</item>
        27
        <item>uttarakhand</item>
        28
        <item>Uttar Pradesh</item>
        29
        <item>West Bengal</item>
    </string-array>

    <string-array name="acc_type">
        <item>Income</item>
        <item>Expense</item>
    </string-array>


</resources>
