<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.ActivityStatistics">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/statistics" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall_performance" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_quizzes" />

            <TextView
                android:id="@+id/total_quizzes_content"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highest_score" />

            <TextView
                android:id="@+id/highest_score_content"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfect_quizzes" />

            <TextView
                android:id="@+id/perfect_quizzes_content"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--divider here-->
            <!--<include layout="@layout/divider"></include>-->

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/averages"-->
            <!--style="@style/StatsTitles"/>-->

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_score" />

            <TextView
                android:id="@+id/average_score"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_time_right" />

            <TextView
                android:id="@+id/average_time_right"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_time_wrong" />

            <TextView
                android:id="@+id/average_time_wrong"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--divider here-->
            <include layout="@layout/divider"></include>

            <TextView
                style="@style/StatsTitles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_records" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_category" />

            <TextView
                android:id="@+id/best_category"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worst_category" />

            <TextView
                android:id="@+id/worst_category"
                style="@style/StatsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/FullStatistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/half_margin"
                    android:paddingRight="@dimen/half_margin"
                    android:text="@string/full_stats_for" />

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_stats_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_questions_answered" />

                <TextView
                    android:id="@+id/total_questions_answered"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correctly_answered" />

                <TextView
                    android:id="@+id/correctly_answered"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage_score" />

                <TextView
                    android:id="@+id/percentage_score"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_overall" />

                <TextView
                    android:id="@+id/average_time_overall"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_right" />

                <TextView
                    android:id="@+id/average_time_right_category"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/StatsLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_wrong" />

                <TextView
                    android:id="@+id/average_time_wrong_category"
                    style="@style/StatsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
