<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avinashdavid.trivialtrivia.UI.ActivityPostQuiz">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/results" />

    <!--<ScrollView-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_width="match_parent"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text=" out of "
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/quizLengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/cards_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:divider="@android:color/transparent"
            android:orientation="horizontal" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/StatsLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_time_right" />

            <TextView
                android:id="@+id/timeright_textview"
                style="@style/StatsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/StatsLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_time_wrong" />

            <TextView
                android:id="@+id/timewrong_textview"
                style="@style/StatsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--android:paddingTop="@dimen/activity_vertical_margin"/>-->


    </LinearLayout>

    <!--</ScrollView>-->

</RelativeLayout>

